<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DUT_SEW_FU_Steuern" Id="{ce1e012d-31b2-4784-ae9e-577b81cee945}">
    <Declaration><![CDATA[TYPE DUT_SEW_FU_Steuern :
STRUCT

	vor					:BOOL;
	zur					:BOOL;
	speed				:REAL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>